+ fixed average overlap

--- a/src/summarypage/summary-page.scss
+++ b/src/summarypage/summary-page.scss
@@ -1,4 +1,5 @@
 .course-card-list {
+  margin-top: 32px;
   max-width: 1048px;
 }
 
